[workspace]
members = [".", "codecs/hevc-sys", "codecs/codec-wrapper"]

[package]
name = "videoplayer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
bytes = "1"
console_error_panic_hook = "0.1"
hevc-sys = { path = "codecs/hevc-sys" }

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlBuffer",
    "WebGlUniformLocation",
]

[profile.release]
opt-level = "s"
lto = true
